--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <h1>URL Shortener</h1>
-    <form class="url-form" action="http://localhost:4100/new" method="POST">
+    <form class="url-form" action="/new" method="POST">
       <label for="url-input">Paste in a URL to shorten:</label>
       <input type="text" class="url-input" type="url" name="url">
       <button type="submit">Shorten!</button>
